# phoenix4all

./: .gitignore  CONTRIBUTING.md  README.md  STRATEGIES.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: main.yml  on-release-main.yml  validate-codecov-config.yml
docs/: index.md  modules.md  taurex.md
src/phoenix4all/: __init__.py  downloader.py  io.py  taurex.py
src/phoenix4all/cache/svo/: svo_dataset.jsonz
src/phoenix4all/net/: http.py
src/phoenix4all/sources/: __init__.py  core.py  hiresfits.py  pollux.py  svo.py  synphot.py
tests/: test_core.py  test_downloader.py  test_http.py  test_io.py  test_log.py  test_svo.py  test_taurex.py
tools/: create_hiresfit_cache.py  new_era_cache.py  svo_cache.py
